--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "hw/hw2/lib/forge-std"]
 	path = hw/hw2/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "hw/hw12/lvl0/lib/forge-std"]
+	path = hw/hw12/lvl0/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
