--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "hw/hw12/asbf25_ctf/lib/forge-std"]
 	path = hw/hw12/asbf25_ctf/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "hw/hw12/ctf/lib/forge-std"]
+	path = hw/hw12/ctf/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
